--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
       href="style.css" />
   </head>
   <body>
-    <nav></nav>
-    <header></header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+    <header>
+      <h1>Title headline</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+        asperiores maiores fugit quam amet sint dolore illo nesciunt ex eaque
+        nihil sit, modi voluptatum et assumenda laborum culpa blanditiis! Eos?
+      </p>
+    </header>
 
     <main></main>
 
